Fix font size in horizontal view on mobile.

--- a/src/components/AboutSection.css
+++ b/src/components/AboutSection.css
@@ -13,7 +13,7 @@
     font-size: 1.5em;
 }
 .about-inner-container p{
-    font-size: 1em;
+    font-size: 16px;
     margin: 20px 0 0;
 }
 .resume-btn{
