--- a/src/components/IntroSection.css
+++ b/src/components/IntroSection.css
@@ -79,7 +79,7 @@ a img{
         margin: 0;
     }
     .downBtn{
-        bottom: 10%;
+        bottom: 7%;
     }
     .downBtn p{
         display: none;
